# cannoli

./: .gitignore  Cargo.toml  LICENSE  README.md
lib/: lib.c  lib.ll
src/: '  README.md  lib.rs  main.rs
src/compiler/: errors.rs  function.rs  local.rs  mod.rs  program.rs  symtbl.rs  types.rs  util.rs
src/compiler/arch/: llvm.rs
src/compiler/cfg/: block.rs  mod.rs
src/lexer/: errors.rs  iter.rs  mod.rs  tokens.rs
src/parser/: ast.rs  errors.rs  mod.rs  util.rs
test_suite/: README.md  cannoli  run_tests
test_suite/microbenchmarks/bench01/: info.txt  test.py
test_suite/microbenchmarks/bench02/: info.txt  test.py
test_suite/microbenchmarks/bench03/: info.txt  test.py
test_suite/microbenchmarks/bench04/: info.txt  test.py
test_suite/microbenchmarks/bench05/: info.txt  test.py
test_suite/microbenchmarks/bench06/: info.txt  test.py
test_suite/microbenchmarks/bench07/: info.txt
test_suite/microbenchmarks/bench08/: test.py
test_suite/microbenchmarks/bench09/: info.txt  test.py
test_suite/microbenchmarks/bench10/: info.txt
test_suite/microbenchmarks/bench11/: test.py
test_suite/microbenchmarks/bench12/: info.txt
test_suite/microbenchmarks/bench13/: test.py
test_suite/microbenchmarks/bench14/: info.txt  test.py
test_suite/sandbox/: Cargo.toml
test_suite/sandbox/src/: cannoli_mods.rs
test_suite/suite/test01/: .rs  expected.out  info.txt  test.py
test_suite/suite/test02/: info.txt  test.out  test.py
test_suite/suite/test03/: expected.out  info.txt  (+1 more)
tests/: parser.rs
tests/simple_stmts/: global.py  nonlocal.py  pass.py  test.py
(+85 files in other folders)
